# python-learning

./: README.md  day1.py  day1_result.md  generate_tree.sh
day01_basics/: README.md  day1.py  input.py  type.py  url
day02_python_syntax/: README.md  day2_problems,md  day2_problems.md  input.py
day02_syntax/: README.md  url
day03_Mastering_Data_Types/: README.md  data_type.py  url
day04/: README.md
day04_Strings_Mutable_Immutable/: strings.py
day04_string/: README.md  url
day05/: README.md
day05_strings/: url
day06/: README.md  convert.md
day06_convert/: README.md  url
day07/: README.md  tuple.md  url
day07_tuple/: README.md
day08/: README.md
day08_dictionary/: README.md  url
day09/: README.md  input.md
day09_input/: url
day10/: README.md  file.md  url
day10_file/: README.md
day11/: README.md
day11_file2/: README.md  file2.md  url
day12/: README.md  url
day12_number/: README.md
day13/: README.md  number2.md
day13_number2/: url
day14/: README.md
day14_arithmetic/: README.md  url
day15/: README.md
day15_operator/: operator.md  url
day16/: README.md  function.md  url
day16_function/: README.md
package/: pyproject.toml
real-world-projects/: README.md
real-world-projects/Scenario-1/: employees.json  sales.csv  sc1_file_processing.py
