[project]
name = "python_package"
version = "0.0.1"
authors = [
  { name="Pankaj Pratap Singh", email="pankajsys.engg@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pankajps/python-learning"
Issues = "https://github.com/pankajps/python-learning/issues"
